--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/jsonfile": "^6.1.4",
     "@types/node": "^20.4.2",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.8.0",
@@ -24,9 +25,13 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.9",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
+    "jsonfile": "^6.1.0",
+    "lodash": "^4.17.21",
+    "lowdb": "^5.0.0",
     "path": "^0.12.7",
     "zod": "^3.23.8"
   }
