--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn src/index.ts"
+    "dev": "ts-node-dev --respawn src/index.ts",
+    "execute": "npx ts-node src/steps/execute.ts > logs/output.log 2>&1"
   },
   "keywords": [],
   "author": "",
