--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format": "prettier --write .",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn src/index.ts",
-    "execute": "npx ts-node src/steps/execute.ts > logs/output.log 2>&1"
+    "execute-log": "npx ts-node src/steps/execute.ts > logs/output.log 2>&1",
+    "execute": "npx ts-node src/steps/execute.ts"
   },
   "keywords": [],
   "author": "",
